﻿TODO Starting, stopping, and starting again fails because all ports fail to bind
TODO Add setting to specify terminal type (ascii, ansi, rip, auto-detect)
TODO You have an entry for 2048 but no binaries
TODO .NET 3.5 is required

Sep 10, 2014
	- Add a thread that downloads StatusCake and UptimeRobot IPs on an hourly basis so they can be added to the ignored-ips list.

Aug 14, 2014
	- Display date and type of last connection in GameSrvConsole
	- Add options for 24hour display and simple output in GameSrvConsole

Aug 13, 2014
	- Add hotkey for clearing the screen in GameSrvConsole

Aug 12, 2014
	- Fixed a bug where RUNBBS sessions on node 1 were disconnected when a second call to node 2 came in
	- GameSrvConsole no longer uses the TimeFormatUI in the footer (some formats were too large for the space allocated)
	  - It now uses TimeFormatUI for that status messages though, and also colour codes error/warning/debug messages

Mar 7, 2014
	- Fixed websocket negotiation again, so now ancient browsers only supporting hixie-76 (like my touchpad) can connect

Feb 25, 2014
    - Fixed websocket negotiation, so now HtmlTerm in IE11 (and possibly other versions) can connect

Jan 31, 2014
	- Ensure GameSrv object is disposed on program close (prevents the exe from hanging on close)

Jan 29, 2014
	- Fixed a problem running DOS doors with Console and Service versions (output was going to GameSrv window, and
	  doors would crash when trying to run a second one during the same login session).  Thanks Ed!

Jan 4, 2014
	- History and Log windows now both visible at same time on GUI.  Hopefully nobody is still using 800x600 or smaller!

Jan 2, 2014
    - Confirm disconnect in GUI
	- Don't coninue running the logon process items if the MainMenu item throws an exception

Jul 23, 2013
	- Fix *DORINFO1 and *DORINFOx command-line specifiers (thanks Philip)

Jul 19, 2013
    - Fix RLogin connections.  Similar fix to the earlier WebSocket connection fix (terminal type detection was