@@ -2,6 +2,8 @@
 TODO Add setting to specify terminal type (ascii, ansi, rip, auto-detect)
 TODO You have an entry for 2048 but no binaries
 TODO .NET 3.5 is required
+TODO Add support for whitelisting rlogin domain names instead of just IP addresses
+TODO Test socket inheritance when passing off to DOSBox
 
 Sep 10, 2014
 	- Add a thread that downloads StatusCake and UptimeRobot IPs on an hourly basis so they can be added to the ignored-ips list.
